--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <style>
             body{background-color:lightpink;
-background-image:url(8-bit-graphics-pixels-scene-with-island.jpg);
+background-image:url(images/8-bit-graphics-pixels-scene-with-island.jpg);
 background-position: center;
 background-attachment: fixed;
 background-size:cover;}
@@ -130,7 +130,7 @@ h1{
 .list1{
  border:5px solid greenyellow;
  border-radius:20px;
- background-image:url(wp4959703-desktop-badass-anime-wallpapers.jpg);
+ background-image:url(images/wp4959703-desktop-badass-anime-wallpapers.jpg);
  background-attachment: fixed;
  background-size: cover;
  display:flex;
@@ -149,7 +149,7 @@ h1{
 .list2{
  border:5px solid greenyellow;
  border-radius:20px;
- background-image:url(wp5074598-anime-badass-quotes-wallpapers.jpg);
+ background-image:url(images/wp5074598-anime-badass-quotes-wallpapers.jpg);
  background-attachment: fixed;
  background-size: cover;
  display:flex;
@@ -168,7 +168,7 @@ h1{
 .list3{
  border:5px solid greenyellow;
  border-radius:20px;
- background-image: url(amanchauhan.jpg);
+ background-image: url(images/amanchauhan.jpg);
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
@@ -250,19 +250,19 @@ border-left-color:blue;
             <div class="p1">Memory Reboot (Slowed) song</div>
         <div class="list1">
         <audio controls>
-           <source src="Memory Reboot (Slowed)-(SambalpuriStar.In).mp3" type="audio/mp3">
+           <source src="songs/Memory Reboot (Slowed)-(SambalpuriStar.In).mp3" type="audio/mp3">
         </audio>
        </div>
        <div class="p2">Darkside - Neoni song</div>
            <div class="list2">
             <audio controls>
-                <source src="Darkside - Neoni [128 Kbps]-(SongsPk.com.se).mp3" type="audio/mp3">
+                <source src="songs/Darkside - Neoni [128 Kbps]-(SongsPk.com.se).mp3" type="audio/mp3">
             </audio>
            </div>
            <div class="p3">Aaron-Smith-Dancin song</div>
            <div class="list3">
             <audio controls>
-                <source src="Aaron-Smith-Dancin.mp3" type="audio/mp3">
+                <source src="songs/Aaron-Smith-Dancin.mp3" type="audio/mp3">
             </audio>
            </div>
         </div>
